@@ -1,5 +1,10 @@
 2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Added
+	  missing null check.
+
+2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Debugging.Evaluation/TypeValueReference.cs:
 	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
 	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Add
